Реализовал подсказки